fix:Putting back the mapper folder