@@ -2,59 +2,53 @@ package br.com.etechoracio.sistema_pesqueiro.service;
 
 import br.com.etechoracio.sistema_pesqueiro.dto.ClienteDTO;
 import br.com.etechoracio.sistema_pesqueiro.entity.Cliente;
+import br.com.etechoracio.sistema_pesqueiro.mapper.ClienteMapper;
 import br.com.etechoracio.sistema_pesqueiro.repository.ClienteRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class ClienteService {
 
     private final ClienteRepository clienteRepository;
+    private final ClienteMapper clienteMapper;
 
-    public ClienteService(ClienteRepository clienteRepository) {
+    public ClienteService(ClienteRepository clienteRepository, ClienteMapper clienteMapper) {
         this.clienteRepository = clienteRepository;
-    }
-
-    public ClienteDTO toDto(Cliente c) {
-        if (c == null) return null;
-        ClienteDTO dto = new ClienteDTO();
-        dto.setId(c.getId());
-        dto.setNome(c.getNome());
-        return dto;
-    }
-
-    public Cliente toEntity(ClienteDTO dto) {
-        if (dto == null) return null;
-        Cliente c = new Cliente();
-        c.setId(dto.getId());
-        c.setNome(dto.getNome());
-        return c;
+        this.clienteMapper = clienteMapper;
     }
 
     public ClienteDTO create(ClienteDTO dto) {
-        Cliente e = toEntity(dto);
-        Cliente saved = clienteRepository.save(e);
-        return toDto(saved);
+        Cliente entity = clienteMapper.toEntity(dto);
+        Cliente saved = clienteRepository.save(entity);
+        return clienteMapper.toDto(saved);
     }
 
     public ClienteDTO update(Integer id, ClienteDTO dto) {
         Optional<Cliente> opt = clienteRepository.findById(id);
-        if (opt.isEmpty()) return null;
+        if (opt.isEmpty()) {
+            return null;
+        }
         Cliente entity = opt.get();
-        entity.setNome(dto.getNome());
+        // Atualiza apenas os campos necessários
+        entity.setNome(dto.nome());
+        entity.setEmail(dto.email());
         Cliente saved = clienteRepository.save(entity);
-        return toDto(saved);
+        return clienteMapper.toDto(saved);
     }
 
     public ClienteDTO findById(Integer id) {
-        return clienteRepository.findById(id).map(this::toDto).orElse(null);
+        return clienteRepository.findById(id)
+                .map(clienteMapper::toDto)
+                .orElse(null);
     }
 
     public List<ClienteDTO> findAll() {
-        return clienteRepository.findAll().stream().map(this::toDto).collect(Collectors.toList());
+        return clienteRepository.findAll().stream()
+                .map(clienteMapper::toDto)
+                .toList();
     }
 
     public void deleteById(Integer id) {
